# sumarizacao-b3

./: README.md  pyproject.toml  scraper.py
data/: b3_file_list_with_links.csv  filtered_b3_file_list_with_links.csv  filtered_docs.parquet  list_b3.parquet  list_b3_pdf_comparison.parquet  summaries_dataset.csv
data/outputs/: bode_summaries.csv  mistral_summaries.csv  t5_summaries.csv
data/txt/: 2023-01-03|001-2023-VPC-Ofício Circular.txt  2023-01-05|002-2023-VNC-Ofício Circular.txt  2023-01-05|003-2023-VPC-Ofício Circular.txt  2023-01-10|001-2023-PRE-Ofício Circular.txt  2023-01-10|003-2023-VNC-Comunicado Externo.txt  2023-01-10|004-2023-VNC-Comunicado Externo.txt  2023-01-17|005-2023-VNC-Comunicado Externo.txt  2023-01-19|002-2023-PRE-Comunicado Externo.txt  2023-01-19|003-2023-VPC-Comunicado Externo.txt  2023-01-19|006-2023-VNC-Comunicado Externo.txt  2023-01-20|004-2023-PRE-Ofício Circular.txt  2023-01-20|005-2023-PRE-Ofício Circular.txt  2023-01-24|006-2023-PRE-Ofício Circular.txt  2023-01-26|008-2023-VNC-Comunicado Externo.txt  2023-01-26|009-2023-VNC-Comunicado Externo.txt  2023-01-31|012-2023-PRE-Ofício Circular.txt  2023-02-02|010-2023-VNC-Comunicado Externo.txt  2023-02-02|011-2023-VNC-Comunicado Externo.txt  2023-02-07|016-2023-PRE-Ofício Circular.txt  2023-02-09|018-2023-PRE-Ofício Circular.txt  2023-02-16|013-2023-VNC-Comunicado Externo.txt  2023-02-16|019-2023-PRE-Ofício Circular.txt  2023-02-23|020-2023-PRE-Ofício Circular.txt  2023-02-23|021-2023-PRE-Ofício Circular.txt  2023-02-28|006-2023-PRE-Comunicado Externo.txt  2023-02-28|014-2023-VNC-Comunicado Externo.txt  2023-02-28|016-2023-VNC-Comunicado Externo.txt  2023-02-28|023-2023-PRE-Ofício Circular.txt  2023-03-02|024-2023-PRE-Ofício Circular.txt  2023-03-02|025-2023-PRE-Ofício Circular.txt  (+180 more)
notebooks/: 0_b3_scraper_explora.ipynb  1_b3_dataprep.ipynb  2_analises_conv_coleman_liau.ipynb  3_Bode.ipynb  3_Mistral.ipynb  3_PTT5.ipynb  b3_dataprep.ipynb  b3_models.ipynb  b3_scraper_explora.ipynb
src/: README.md  extract_pdf.py  requirements_extract.txt  scraper.py
