[tool.poetry]
name = "poli-capstone-project"
version = "0.1.0"
description = ""
authors = ["Gabriel Benvegmi"]
readme = "README.md"
packages = [{include = "poli_capstone_project"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.66.1"
pypdf = "^3.15.2"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
