[tool.poetry]
name = "poli-capstone-project"
version = "0.0.1"
description = "Gabriel Benvegmi's Capstone Project"
authors = ["gbieul <gbieulbenveg@outlook.com>"]
readme = "README.md"
packages = [{include = "poli_capstone_project"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.66.1"
pypdf = "^3.17.0"
pdfminer = "^20191125"
pandas = "^2.1.2"
pyarrow = "^13.0.0"
requests = "^2.31.0"
jupyterlab = "^4.0.7"
pdfminer-six = "^20221105"
pypdfium2 = "^4.22.0"
matplotlib = "^3.8.0"
tika = "^2.6.0"
gspread = "^5.12.0"
transformers = "^4.35.0"
sentencepiece = "^0.1.99"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
ipywidgets = "^8.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
